@@ -8,6 +8,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URLClassLoader;
 
 public class SetupForgeServer extends DefaultTask {
 
@@ -21,13 +22,14 @@ public class SetupForgeServer extends DefaultTask {
     @TaskAction
     private void setupForge(){
         try {
-            if (new File(this.folder, "libraries").exists()){
-                throw new GradleException("Setup has already run, do \"gradle cleanForgeServer\" before running this command again");
-            }
-
             this.getLogger().lifecycle("Starting setup");
 
-            Process pr = Runtime.getRuntime().exec("java -jar setup.jar --installServer", null, this.folder);
+            Process pr = new ProcessBuilder()
+                    .command("java -jar setup.jar --installServer".split(" "))
+                    .directory(this.folder)
+                    .redirectErrorStream(true)
+                    .start();
+
             BufferedReader reader = new BufferedReader(new InputStreamReader(pr.getInputStream()));
 
             while (pr.isAlive()){
@@ -36,7 +38,16 @@ public class SetupForgeServer extends DefaultTask {
                     this.getLogger().lifecycle(line);
             }
 
+
             new File(this.folder, "setup.jar").delete();;
+            try {
+                pr.waitFor();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+
+            File serverjar = new File(this.folder, "setup.jar");
+            serverjar.delete();
 
             for (File file : folder.listFiles((dir, name) -> name.endsWith("-universal.jar"))) {
                 file.renameTo(new File(this.folder, "server.jar"));
